<resources>
    <string name="app_name">MyCoffeShop Genap Nama NIM</string>
    <string name="nama">Nama</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="kategori">Kategori</string>
    <string name="makanan_pelengkap">Makanan Pelengkap</string>
    <string name="cake">Cake</string>
    <string name="brownies">Brownies</string>
    <string name="dalgona_candy">Dalgona Candy</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string-array name="kategori">
        <item>Kopi Arabika</item>
        <item>Kopi Robusta</item>
        <item>Kopi Liberika</item>
        <item>Kopi Ekselsa</item>
    </string-array>
</resources>
