<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NoteAddUpdateActivity">

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:padding="15dp"/>

    <Spinner
        android:id="@+id/spnr_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/kategori"
        android:padding="15dp" />


    <EditText
        android:id="@+id/edt_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deskripsi"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:padding="15dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makanan_pelengkap"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ch_cake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cake"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/ch_brownies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brownies" />

    <CheckBox
        android:id="@+id/ch_dalgonacandy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dalgona_candy" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>